reduce stream demo